--- a/webroot/topic 5/exercise2.html
+++ b/webroot/topic 5/exercise2.html
@@ -69,7 +69,7 @@
                     working as a Math tutor for students up to A-Level Math.
                 </p>
                 <figure>
-                    <img src="./winterwonderland.jpg" alt="winter wonderland picture" width="220px" height="220px">
+                    <img src="./winterwonderland.jpg" alt="winter wonderland picture" class="responsive">
                 </picture>
             </section>
             <section id="education">
