--- a/webroot/topic 5/exercise2.html
+++ b/webroot/topic 5/exercise2.html
@@ -64,14 +64,16 @@
         <section class="col2 col">
             <section id="aboutMe">
                 <h3>About Myself</h3>
-                <p>
-                    Hi there, I'm Yaseen Rashid, where I am studying Computer Science at Queen Mary's University of London, as well 
-                    working as a Math tutor for students up to A-Level Math.
-                </p>
-                <figure>
-                    <img src="./winterwonderland.jpg" alt="winter wonderland picture" class="responsive">
-                </picture>
-            </section>
+                <section>
+                    <p>
+                        Hi there, I'm Yaseen Rashid, where I am studying Computer Science at Queen Mary's University of London, as well 
+                        working as a Math tutor for students up to A-Level Math.
+                    </p>
+                    <figure>
+                        <img src="./winterwonderland.jpg" alt="winter wonderland picture" class="responsive">
+                    </figure>
+                </section>
+            </section><hr>
             <section id="education">
                 <h3>
                     Education
@@ -84,7 +86,7 @@
                         2021 - Present | Queen Mary University Of London
                     </li>
                 </ul>
-            </section>
+            </section><hr>
             <section id="myCV">
                 <h3>My CV</h3>
                 <a>
@@ -93,7 +95,7 @@
                 <a href="./my_CV.html" target="_blank">View</a>
                 <a> | </a>
                 <a href="./my_CV.html" download>Download</a>
-            </section>
+            </section><hr>
             <section id="myLinks">
                 <h3>Links</h3>
                 <a>Some intersting links I have found: </a>
