--- a/webroot/miniproject/login.html
+++ b/webroot/miniproject/login.html
@@ -18,8 +18,8 @@
 				</h2>
 			</header>
 			<section>
-				<input id="username" type="text" placeholder="Username " class="row log-input-box" maxlength="16" required>
-				<input id="password" type="password" placeholder="Password" class="row log-input-box" maxlength="16" required>
+				<input id="username" name="username" type="text" placeholder="Username " class="row log-input-box" maxlength="16" required>
+				<input id="password" name="password" type="password" placeholder="Password" class="row log-input-box" maxlength="16" required>
 				<button id="submit" type="submit" class="row log-submit-box">Submit</button>
 				<a href="index.php" class="log-home-box">
 					Home
