--- a/webroot/miniproject/login.html
+++ b/webroot/miniproject/login.html
@@ -20,8 +20,8 @@
 			<section>
 				<input id="username" name="username" type="text" placeholder="Username " class="row log-input-box" maxlength="16" required>
 				<input id="password" name="password" type="password" placeholder="Password" class="row log-input-box" maxlength="16" required>
-				<button id="submit" type="submit" class="row log-submit-box">Submit</button>
-				<a href="index.php" class="log-home-box">
+				<button id="submit" type="submit" class="button-box submit">Submit</button>
+				<a href="index.php" class="button-box">
 					Home
 				</a>
 			</section>
