--- a/webroot/miniproject/login.html
+++ b/webroot/miniproject/login.html
@@ -11,7 +11,7 @@
 <body class="log-body">
 <article class="content-article">
 	<section class="content-container-log row">
-		<form id="logIn">
+		<form id="logIn" action="login.php" method="post">
 			<header>
 				<h2>
 					Log in
