--- a/webroot/miniproject/login.html
+++ b/webroot/miniproject/login.html
@@ -18,9 +18,9 @@
 				</h2>
 			</header>
 			<section>
-				<input id="username" name="username" type="text" placeholder="Username " class="row log-input-box" maxlength="16" required>
-				<input id="password" name="password" type="password" placeholder="Password" class="row log-input-box" maxlength="16" required>
-				<button id="submit" type="submit" class="button-box submit">Submit</button>
+				<input id="username" name="Username" type="text" placeholder="Username " class="row log-input-box" maxlength="16" required>
+				<input id="password" name="Password" type="password" placeholder="Password" class="row log-input-box" maxlength="16" required>
+				<button id="submit" name="login" type="submit" class="button-box submit">Submit</button>
 				<a href="index.php" class="button-box">
 					Home
 				</a>
