--- a/webroot/miniproject/login.html
+++ b/webroot/miniproject/login.html
@@ -20,7 +20,7 @@
 			<section>
 				<input id="username" name="Username" type="text" placeholder="Username " class="row log-input-box" maxlength="16" required oninvalid="this.setCustomValidity('Enter the username... '), this.style.outlineColor = 'crimson'"  oninput="this.setCustomValidity('')">
 				<input id="password" name="Password" type="password" placeholder="Password" class="row log-input-box" maxlength="16" required oninvalid="this.setCustomValidity('Enter the password... '), this.style.outlineColor = 'crimson'"  oninput="this.setCustomValidity('')">
-				<button id="submit" name="login" type="submit" class="button-box submit">Submit</button>
+				<button id="submit" name="login" type="submit" class="button-box submit">Log in</button>
 				<a href="index.php" class="button-box">
 					Home
 				</a>
